# Diplomas

./: .gitignore  CatBoost_classification.ipynb  README.md  features.csv  pyproject.toml  requirements.txt  test_features.csv
Backend/: Dockerfile  README.md  TG3.edf  TG5.edf  main.py  pyproject.toml  requirements.txt  test_input.json
Backend/outputs/: out_TG3.json  out_TG5.json
Classifiers/: RF_CNN_SVM.ipynb  lda_result.csv
Classifiers/Catboost/: CatBoost_classification.ipynb  generate.ipynb  train_features.csv
Classifiers/Cross Valid NN/: NeuralNetwork.ipynb  config.yaml  model_weights.pth
Classifiers/Grouped Conv Net/: NeuralNetwork.ipynb  config.yaml  model_weights.pth
Classifiers/LDA/: LDA.ipynb
Classifiers/NN/: NN_result.csv  NeuralNetwork.ipynb  best_model_sampler_BCE_1_6.pt  best_model_sampler_Focal.pt  config.yaml  metrics.ipynb  metrics_test.ipynb  report.ipynb
Classifiers/NN/best_amy/: config.yaml  predictions.csv  predictions_csv_generator.ipynb
Classifiers/NN/best_fraction/: config.yaml  predictions_csv_generator.ipynb  predictions_test_1.csv  predictions_test_2.csv
Classifiers/NN/checkpoints/: model_Run-20241115-135615_weights.pth  model_Run-37482418_weights.pth  model_Run-57b6af46_weights.pth  (+2 more)
Classifiers/RF + SVM/: RF&SVM_result.csv  RF_CNN_SVM.ipynb  metrics.ipynb  voted_result.csv
Classifiers/VAD/: VAD.ipynb  vrae.py
Data/: four_strategy_gen.py  fraction_gen.py  split.py
Data/dumped/: X_test.npy  y_test.npy  y_test.pkl  y_train.npy  y_train.pkl
LDA/: LDA.ipynb
Scripts/: data_generator.py  features.py  vecg_json_generation.py
(+10 files in other folders)
