[tool.poetry]
name = "diplomas"
version = "0.1.0"
description = ""
authors = ["Артём Кравченко <artem.kravchenko@nvi-research.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
neurokit2 = "^0.2.10"
scikit-learn = "^1.5.2"
clearml = "^1.16.5"
mlflow = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
